# E.V3

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_COMPLETE.md  BUILD_GUIDE.md  BUILD_QUICK_REF.md  BUILD_STATUS.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DELIVERY_CHECKLIST.md  DEVELOPMENT.md  DIAGRAMS.md  DOCUMENTATION_INDEX.md  Daemon.spec  ENVIRONMENT_SETUP.md  EV3Companion.spec  EV3Service.spec  EV3Shell.spec  FIRST_TIME_SETUP.md  INTEGRATION_SUMMARY.md  Kernel.spec  LICENSE.txt  PRODUCTION_BUILD_NOTES.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_SETUP.md  README.md  README_QUICK_START.md  REPO_CLEANUP.md  SPEECH_IMPLEMENTATION.md  STATUS_REPORT.md  SYSTEM_TRAY_UPDATE.md  Shell.spec  TESTING.md  USAGE_GUIDE.md  build.bat  build_cpp_kernel.bat  build_exe.py  build_output.txt  (+23 more)
.python313_portable/: python313._pth
assets/: .gitkeep  Core_Frame.eps  README_CORE_FRAME.md
config/: config.yaml  permissions.yaml
docs/: DEVELOPMENT.md  DIAGRAMS.md  DOCUMENTATION_INDEX.md  GPU_SKINNING.md  MISTRAL_SETUP.md  PROJECT_SUMMARY.md  SPEECH_QUICK_REF.md  SPEECH_SYSTEM.md
docs/setup/: ENVIRONMENT_SETUP.md  FIRST_TIME_SETUP.md  QUICKSTART.md
ipc/: __init__.py  native_pipe.py
kernel/: __init__.py  kernel.py  module.py
kernel_cpp/: CMakeLists.txt  __init__.py  build_clang.bat  build_kernel.bat  build_kernel_v2.bat  build_msvc.bat  toolchain.cmake
kernel_cpp/cmake/: EV3KernelConfig.cmake.in
kernel_cpp/docs/: API.md  ARCHITECTURE.md  BUILD.md  INTEGRATION.md
kernel_cpp/include/ev3/: common.hpp  config.hpp  ev3.hpp  event_bus.hpp  ipc_server.hpp  kernel.hpp  llm_engine.hpp  logger.hpp  module.hpp  task_queue.hpp
kernel_cpp/src/: event_bus.cpp  main.cpp  python_bindings.cpp
kernel_cpp/temp_build/: CMakeCache.txt
models/: MODEL_SETUP.md
models/character/: .gitkeep  README.md
models/speech/: README.md  voicepack_schema.json
models/speech/hybrid_voice/: README.md  config.json
models/speech/piper_english/: README.md  config.json
models/speech/sample_voice/: README.md  config.json
modules/: __init__.py  calendar_module.py  event_module.py  ipc_module.py  llm_module.py  state_module.py  system_module.py
scripts/: install_mistral_env.bat  setup_python313_llama.ps1
scripts/python/: build_exe.py  build_shell_only.py  check_build_state.py  install_service.py  package_dist.py  start.py
service/: __init__.py
service/calendar/: __init__.py  calendar_manager.py
service/core/: __init__.py  service.py
service/events/: __init__.py  event_listeners.py
service/llm/: __init__.py  llm_manager.py  mistral_loader.py
service/modules/: __init__.py  service.py
service/state/: __init__.py  state_machine.py
tests/: ev3_shell.py  test_components.py
tools/: download_mistral.py  download_phi3.py  send_ipc_test.py  test_mistral.py  test_speech.py
ui/: __init__.py
ui/animations/: __init__.py  animation_controller.py  model_loader.py
ui/renderer/: __init__.py  gpu_skinning.py  model_loader.py  opengl_renderer.py
ui/speech/: __init__.py  speech_manager.py  voicepack_loader.py
ui/window/: __init__.py  companion_window.py  core_window.py  shell_window.py
